# internal/pkg/tmf-service-order/swagger/tmf641v4_2/server/models/json_patch_operation.go
@@ -1,0 +1,142 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+	"encoding/json"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// JSONPatchOperation JSON patch operation
+//
+// swagger:model JSONPatchOperation
+type JSONPatchOperation struct {
+
+	// A string containing a JSON Pointer path (for move/copy)
+	From string `json:"from,omitempty"`
+
+	// The operation to be performed
+	// Required: true
+	// Enum: ["add","remove","replace","move","copy","test"]
+	Op *string `json:"op"`
+
+	// A JSON Pointer
+	// Required: true
+	Path *string `json:"path"`
+
+	// The value to be used within the operations.
+	Value interface{} `json:"value,omitempty"`
+}
+
+// Validate validates this JSON patch operation
+func (m *JSONPatchOperation) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateOp(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validatePath(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+var jsonPatchOperationTypeOpPropEnum []interface{}
+
+func init() {
+	var res []string
+	if err := json.Unmarshal([]byte(`["add","remove","replace","move","copy","test"]`), &res); err != nil {
+		panic(err)
+	}
+	for _, v := range res {
+		jsonPatchOperationTypeOpPropEnum = append(jsonPatchOperationTypeOpPropEnum, v)
+	}
+}
+
+const (
+
+	// JSONPatchOperationOpAdd captures enum value "add"
+	JSONPatchOperationOpAdd string = "add"
+
+	// JSONPatchOperationOpRemove captures enum value "remove"
+	JSONPatchOperationOpRemove string = "remove"
+
+	// JSONPatchOperationOpReplace captures enum value "replace"
+	JSONPatchOperationOpReplace string = "replace"
+
+	// JSONPatchOperationOpMove captures enum value "move"
+	JSONPatchOperationOpMove string = "move"
+
+	// JSONPatchOperationOpCopy captures enum value "copy"
+	JSONPatchOperationOpCopy string = "copy"
+
+	// JSONPatchOperationOpTest captures enum value "test"
+	JSONPatchOperationOpTest string = "test"
+)
+
+// prop value enum
+func (m *JSONPatchOperation) validateOpEnum(path, location string, value string) error {
+	if err := validate.EnumCase(path, location, value, jsonPatchOperationTypeOpPropEnum, true); err != nil {
+		return err
+	}
+	return nil
+}
+
+func (m *JSONPatchOperation) validateOp(formats strfmt.Registry) error {
+
+	if err := validate.Required("op", "body", m.Op); err != nil {
+		return err
+	}
+
+	// value enum
+	if err := m.validateOpEnum("op", "body", *m.Op); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *JSONPatchOperation) validatePath(formats strfmt.Registry) error {
+
+	if err := validate.Required("path", "body", m.Path); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this JSON patch operation based on context it is used
+func (m *JSONPatchOperation) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *JSONPatchOperation) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *JSONPatchOperation) UnmarshalBinary(b []byte) error {
+	var res JSONPatchOperation
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
